# nucleo-f401re-mpu6050

./: Cargo.toml  Embed.toml  README.md
.cargo/: config
.github/workflows/: CI.yml
src/: main.rs
