[package]
name = "nucleo-f401re-servo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
mpu6050 = "0.1.6"
defmt = "0.3.5"
defmt-rtt = "0.4"

[dependencies.stm32f4xx-hal]
version = "0.20"
features = ["stm32f401"]
